--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DataSecurity</title>
-	<link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+	<link rel="stylesheet" type= "text/css" href= "/static/styles/styles.css">
 </head>
 
 <body>
